--- a/CnvWid.ui
+++ b/CnvWid.ui
@@ -11,17 +11,45 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>CnvWid</string>
+   <string>环境变量配置</string>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <widget class="QTreeWidget" name="treeWidget">
      <column>
       <property name="text">
-       <string notr="true">1</string>
+       <string>名称</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>节点类型</string>
+      </property>
+     </column>
+     <column>
+      <property name="text">
+       <string>数值类型</string>
       </property>
      </column>
     </widget>
+   </item>
+   <item>
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,0">
+     <item>
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>TextLabel</string>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>设置</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
